updated webpage with fiddle

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ A list as an array is passed in to the object as it is beig instantiated and the
         <span class="pl-k">return</span> <span class="pl-smi">m</span>.<span class="pl-en">component</span>(myList);
     }
 }</pre></div>
-
+      <p>Live Example</p>
+      <script async src="//jsfiddle.net/pharzan/ar20pL37/1/embed/"></script>
 <p>For easier usage the component has the following functions which can be accessed directly:</p>
 
 <ul>
