--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ A list as an array is passed in to the object as it is beig instantiated and the
     }
 }</pre></div>
       <p>Live Example</p>
-      <script async src="//jsfiddle.net/pharzan/ar20pL37/1/embed/"></script>
+      <iframe width="100%" height="300" src="//jsfiddle.net/pharzan/ar20pL37/1/embedded/js,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 <p>For easier usage the component has the following functions which can be accessed directly:</p>
 
 <ul>
