--- a/index.html
+++ b/index.html
@@ -69,13 +69,10 @@ A list as an array is passed in to the object as it is beig instantiated and the
 
 <ul>
 <li>
-<a href="https://github.com/markdown-it/markdown-it">markdown-it</a> for Markdown parsing</li>
+<a href="https://github.com/pharzan/mithDropDown">GitHub</a> repository</li>
 <li>
-<a href="http://codemirror.net/">CodeMirror</a> for the awesome syntax-highlighted editor</li>
+<a href="http://mithril.js.org/">mithril.js</a> </li>
 <li>
-<a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a> for syntax highlighting in output code blocks</li>
-<li>
-<a href="https://github.com/dankogai/js-deflate">js-deflate</a> for gzipping of data to make it fit in URLs</li>
 </ul>
 
       <footer class="site-footer">
